gcp/yaml/triggers/el-ingress.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: el-ingress
spec:
  tls:
    - secretName: harbor-cert
      hosts:
        - HARBOR.YOURSITE.COM
  rules:
    - host: HARBOR.YOURSITE.COM
      http:
        paths:
          - path: /webhook
            backend:
              serviceName: el-webhook-listener
              servicePort: 8080
          - path: /asylo-webhook
            backend:
              serviceName: el-asylo-webhook-listener
              servicePort: 8080
